--- a/pages/legal-page.html
+++ b/pages/legal-page.html
@@ -26,7 +26,7 @@
     </header>
     <main>
       <section>
-        <span class="section-label">User agreement</span>
+        <span class="section-label main">User agreement</span>
         <div class="document-content">
           <p>
             This User Agreement ("Agreement") is a legal agreement between you
@@ -125,7 +125,7 @@
         </div>
       </section>
       <section>
-        <span class="section-label">Terms of service</span>
+        <span class="section-label main">Terms of service</span>
         <div class="document-content">
           <p>
             This User Agreement ("Agreement") is a legal agreement between you
@@ -224,7 +224,7 @@
         </div>
       </section>
       <section>
-        <span class="section-label">Terms of use</span>
+        <span class="section-label main">Terms of use</span>
         <div class="document-content">
           <p>
             This User Agreement ("Agreement") is a legal agreement between you
